Minor changes to HTML meta info

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    <meta charset="utf-8">
     <!-- import fonts -->
     <link href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-    <button id="get-quote">Get Quote</button>
-    <button id="tweet-quote">Tweet Quote</button>
-    <button id="discover-author">Discover Author</button>
+    <div id="controls">
+        <button id="get-quote">Get Quote</button>
+        <button id="tweet-quote">Tweet Quote</button>
+        <button id="discover-author">Discover Author</button>
+    </div>
     <div id="billboard">
         <img src="https://dl.dropboxusercontent.com/s/yswx218aw30zdhp/billboard.png">
         <p id="quote">Get a quote by clicking the button above!
